# Surfboard

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Roadmap.md  SURFBOARD_CHROMITE_DOCUMENTATION.md  USAGE_EXAMPLES.md  debug_chrome_launch.py  debug_chrome_window.py  debug_navigation.py  final_chrome_test.py  fixed_chrome_test.py  force_new_chrome.py  graceful_chrome_management.ps1  profile_helper.py  pyproject.toml  simple_chrome_test.py  surfboard-chromite-integration.js  test_basic_chrome.py  test_chrome_screenshot_analysis.py  test_chrome_visible.py  test_claude_navigation.py  test_isolated_chrome.py  test_phase3_integration.py  test_phase3_simplified.py  test_surfboard_visual.py  test_web_navigation.py  windows_screenshot.py
.github/workflows/: ci.yml
benchmarks/: latency_results.json  protocol_latency.py
docs/: CODING_STANDARDS.md  ENVIRONMENT_SETUP.md
examples/: phase1_demo.py  phase2_demo.py  phase3_demo.py
extensions/dummy/: background.js  content.js  manifest.json  popup.html  popup.js
schemas/: browser_config.json  command_types.json  commands.json  element_selector.json  llm_message.json  responses.json  status_types.json  viewport.json
specs/: Specification.md
src/surfboard/: __init__.py  core.py
src/surfboard/actions/: core_actions.py
src/surfboard/automation/: __init__.py  advanced_interactions.py  browser.py  browser_manager.py  element_selector.py  error_recovery.py  performance_optimizer.py  smart_waiter.py  windows.py  windows_capture.py
src/surfboard/communication/: __init__.py  command_executor.py  page_analyzer.py  websocket_server.py
src/surfboard/protocols/: __init__.py  cdp.py  cdp_domains.py  llm_protocol.py  native_messaging.py
tests/: __init__.py  test_advanced_automation.py  test_browser_manager.py  test_cdp_connection.py  test_cdp_domains.py  test_chrome_launch.py  test_core_actions.py  test_llm_protocol.py  test_native_messaging.py  test_windows_automation.py
tests/integration/: __init__.py  test_phase2_integration.py
